force-app/main/default/objects/Instance_Info__c/Instance_Info__c.object-meta.xml
<CustomObject>
    <label>Instance Info</label>
    <nameField>
        <label>Instance Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instance Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>