force-app/main/default/objects/Instance_Info__c/fields/Environment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Environment_Purpose__c</fullName>
    <label>Environment Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>