force-app/main/default/objects/Instance_Info__c/fields/Next_Release__c.field-meta.xml
<CustomField>
    <fullName>Next_Release__c</fullName>
    <label>Next Release</label>
    <length>30</length>
    <type>Text</type>
</CustomField>