force-app/main/default/objects/Instance_Info__c/fields/Next_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Release_Date__c</fullName>
    <label>Next Release Date</label>
    <type>DateTime</type>
</CustomField>