force-app/main/default/objects/Instance_Info__c/fields/Next_to_next_release_1__c.field-meta.xml
<CustomField>
    <fullName>Next_to_next_release_1__c</fullName>
    <label>Next to next release 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>