force-app/main/default/objects/Instance_Info__c/fields/Next_to_next_release_1_date__c.field-meta.xml
<CustomField>
    <fullName>Next_to_next_release_1_date__c</fullName>
    <label>Next to next release 1 date</label>
    <type>DateTime</type>
</CustomField>