force-app/main/default/objects/Instance_Info__c/fields/Release_Path__c.field-meta.xml
<CustomField>
    <fullName>Release_Path__c</fullName>
    <label>Release Path</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>