force-app/main/default/objects/Instance_Info__c/fields/Release_Path_Indentifier__c.field-meta.xml
<CustomField>
    <fullName>Release_Path_Indentifier__c</fullName>
    <label>Release Path Indentifier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>