force-app/main/default/objects/Instance_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Environment_Purpose__c</columns>
    <columns>Current_Release__c</columns>
    <columns>Next_Release__c</columns>
    <columns>Next_Release_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>